# python-lexmachina-sync-api-client

./: .gitignore  .readtheedocs.yaml  CHANGELOG.md  README.md  config.ini  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements-tests.txt  requirements.txt
config/: autogeneration.md  config.ini  open_api_autogenerator_config.yml  openapi.json
custom_templates/: README_onlypackage.mustache  api_client.mustache  common_README.mustache
docs/: client_generation.md  conf.py  index.rst  installation.rst  quickstart.rst  spreadsheet_example.rst
examples/: antitrust_cases_example_with_ray.ipynb  judges_for_party.ipynb  judges_for_party_v2.ipynb  recent_case_entity_info.ipynb  spreadsheet_example.ipynb
examples/v1/: recent_case_entity_info.ipynb
open_api_generator_config/: config.yml
src/: .openapi-generator-ignore  lexmachina_README.md
src/.openapi-generator/: FILES
src/lexmachina/: README.md  __about__.py  __init__.py  api_client.py  configuration.py  exceptions.py  openapi.json  rest.py
src/lexmachina/_async/: auth.py  base_request.py  client.py  query_district_cases.py
src/lexmachina/_sync/: auth.py  base_request.py  client.py  query_district_cases.py
src/lexmachina/api/: __init__.py  alerts_api.py  analytics_api.py  attorneys_api.py  authorization_api.py  bankruptcy_cases_api.py  case_query_api.py  dockets_api.py  entities_api.py  federal_appeals_cases_api.py  federal_district_cases_api.py  find_api.py  itc_investigations_api.py  judges_api.py  law_firms_api.py  list_api.py  parties_api.py  patents_api.py  ptab_trials_api.py  search_api.py  state_cases_api.py  status_api.py
src/lexmachina/docs/: Aggregation.md  AlertsApi.md  AnalyticTypes.md  AnalyticsApi.md  AppealsCaseData.md  AttorneysApi.md  BankruptcyCaseData.md  BankruptcyCasesApi.md  CaseAnalyticResult.md  CaseQueryApi.md  (+27 more)
src/lexmachinaSync/: auth.py  base_request.py  casequery.py  client.py  query_district_cases.py
tests/: test_attorneys.py  test_case_search.py  test_district_case.py  test_get_judges.py  test_get_lawfirms.py  test_get_parties.py  test_get_patents.py  test_health.py  test_list_case_resolutions.py  test_list_case_tags.py  test_list_case_types.py  test_list_courts.py  test_list_damages.py  test_list_events.py  test_list_judgment_sources.py  test_query_district_case.py
tests/_async/: config.ini  test_attorneys.py  test_district_case.py  test_get_judges.py  test_get_lawfirms.py  test_get_parties.py  test_get_patents.py  test_health.py  test_list_case_resolutions.py  test_list_case_tags.py  test_list_case_types.py  test_list_courts.py  test_list_damages.py  test_list_events.py  test_list_judgment_sources.py  test_query_district_case.py
tests/_sync/: config.ini  test_attorneys.py  test_district_case.py  test_get_judges.py  test_get_lawfirms.py  test_get_parties.py  test_get_patents.py  test_list_case_resolutions.py  test_list_case_tags.py  test_list_case_types.py  test_list_courts.py  test_list_damages.py  test_list_events.py  test_list_judgment_sources.py  test_query_district_case.py
(+1308 files in other folders)
