[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lexmachina"
version = "0.0.1"
authors = [
  { name="LexMachina", email="dslusher@lexmachina.com" },
]
description = "LexMachina API python sdk"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ['requests >= 2.28.1', 'aiohttp >= 3.8.3']
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache-2.0",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/LexMachinaInc/python-lexmachina-sync-api-client"
"Bug Tracker" = "https://github.com/LexMachinaInc/python-lexmachina-sync-api-client/issues"